// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <TitleBarEnhanced /> Should className contain "af-title-bar--backhome" modifier when backhome equal true 1`] = `
<DocumentFragment>
  <div
    class="af-title-bar af-title-bar--backhome"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <h1
        class="af-title-bar__title"
      />
      <a
        class="btn af-btn--circle"
        href="/"
        title="Retour à l'accueil"
      >
        <i
          class="glyphicon glyphicon-home"
        />
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component <TitleBarEnhanced /> Should className contain "af-title-bar--red" when classModifier equal "red" 1`] = `
<DocumentFragment>
  <div
    class="af-title-bar af-title-bar--red"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <h1
        class="af-title-bar__title"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component <TitleBarEnhanced /> Should render TitleBarEnhanced 1`] = `
<DocumentFragment>
  <div
    class="af-title-bar"
  >
    <div
      class="container af-title-bar__wrapper"
    >
      <h1
        class="af-title-bar__title"
      />
    </div>
  </div>
</DocumentFragment>
`;
